# filaxis

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Procfile  README.md  docker-compose.yml  nixpacks.toml  pyproject.toml  railway.json
filaxis/: config.py  logging.py  temporal_client.py  worker.py
filaxis/activities/: conversion.py  extraction.py  s3.py  storage.py
filaxis/api/: app.py  auth.py
filaxis/api/routes/: dev.py  ingest.py  patient.py  physician.py
filaxis/db/: engine.py  models.py
filaxis/fhir/: loinc.py  models.py
filaxis/workflows/: pdf_pipeline.py
openspec/: 00-proposal.md  01-spec.md  02-design.md  03-tasks.md
tests/: conftest.py  test_api.py  test_conversion.py  test_extraction.py  test_storage.py
